--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -4,7 +4,7 @@
   },
   "nav":{
     "home": "Home",
-    "about_me": "About",
+    "about_me": "About Me",
     "skills": "Skills",
     "projects": "Projects",
     "career": "Career",
