--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -1,6 +1,6 @@
 {
   "website":{
-    "title": "Jack's blog"
+    "title": "Data Me What"
   },
   "nav":{
     "home": "Home",
@@ -27,22 +27,14 @@
   },
   "career":{
     "my_career": "My Career",
-    "nextcode": "Nextcode",
-    "nextcode_des": "Now I am in Nextcode and develop website with Python code for genetic analysis.",
-    "nextcode_date": "Apr. 2016",
-    "nextcode_job": "Python Developer",
-    "netease": "Netease Game",
-    "netease_des": "In Netease game, I learned game service system and use Python code for ops.",
-    "netease_date": "Jun. 2015",
-    "netease_job": "Dev Ops",
-    "ucloud": "Ucloud",
-    "ucloud_des": "In ucloud, I started to deal with servers and Linux system and use shell scripts to manage massive server.",
-    "ucloud_date": "Sep. 2013",
-    "ucloud_job": "Dev Ops",
-    "college": "Graduation",
-    "college_des": "At July 2013,I graduated from college and started my IT technology tour.",
-    "college_date": "Jul. 2013",
-    "college_job": "Student"
+    "italki": "italki",
+    "italki_des": "I'm charged with developing and customizing the analytics solution for the world's largest language learning marketplace. We increased data collection by 30x, while creating an ETL solution to scale using EMR, Hive, Luigi and Redshift.",
+    "italki_date": "Aug. 2015",
+    "italki_job": "Data Scientist Lead",
+    "snl": "Sandia National Laboratories",
+    "snl_des": "Outlier detection with PCA, computer vision with matlab and R. I worked mainly on signal processing and data compression using Savitzky Golay.",
+    "snl_date": "Jul. 2014",
+    "snl_job": "Engineering Data Analyst"
   },
   "blog":{
     "my_blog": "My Blog"
